cambie las paginas a la carpeta

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
@@ -30,7 +31,7 @@
     <p>Our mission is to provide exceptional travel services that cater to your unique needs and preferences. With a wide range of carefully curated travel experiences, we aim to inspire and empower travelers to explore the world in all its diversity.</p>  
         <p> Exotic destinations to off-the-beaten-path discoveries, we offer personalized attention, expert guidance, and unparalleled customer service. Let us be your trusted companion in creating memorable journeys filled with extraordinary moments. </p>
          <p> Join us on this transformative travel adventure and let <strong> Travel Track </strong> be your gateway to unforgettable experiences</p>
-    <img src="./A-Travel-Agent's-Guide-to-Host-Agencies.webp" alt="Image" width="500" height="500">
+    <img src="./images/A-Travel-Agent's-Guide-to-Host-Agencies.jpg" alt="Image" width="600" height="1000">
   </main>
 
   <footer>
