--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
@@ -19,13 +20,6 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><h3>  <a href="https://api.whatsapp.com/send?phone=1234567890&text=Hello%20World!" target="_blank">
-              <i class="fab fa-whatsapp fa-2x"></i>
-            </a>
-            <a href="https://www.instagram.com/your_instagram_username/" target="_blank">
-              <i class="fab fa-instagram fa-2x"></i>
-            </a>
-            
             </h3>
         </ul>
     </nav>
