--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
@@ -34,7 +35,6 @@
       <img src="./images/60420926-travel-budget-concept-travel-money-savings-in-a-glass-jar-on-world-map.webp" alt="Image" width="500" height="500">
       <img src="./images/memoirs.jpg" alt="Image" width="500" height="500">
       <img src="./images/dynamic-1.jpg" alt="Image" width="500" height="500">
-      <img src="./images/couple traveling together.webp" alt="Image" width="500" height="500">
     </div>
   </main>
 
