--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel Track</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-</head>
+  <head>
+    <title>Travel Track - Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  </head>
 <body>
-  <header>
+<header>
     <a href="#" class="sign-in-button">Already a member? Sign In</a>
     <h1 class="cool-title">Travel Track</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About Us</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About Us</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
+</body>
+</html>
 
-  <main class="container mt-3">
-    <h2>Welcome to Travel Track</h2>
-    <p>Welcome to Travel Track, the cutting-edge web platform that takes your travel experiences to new heights. With Travel Track, not only can you plan, organize, and track your adventures effortlessly, but you also earn exciting rewards for your wanderlust. Imagine a world where every journey you take becomes a stepping stone towards your next thrilling expedition.
-    </p>
-    <p>Embark on the journey, Travel With Track! </p>
-    <img src="./images/Screenshot 2023-06-27 173429.jpg" alt="Image" width="500" height="500">
-  </main>
+  </body>
+  
+    <main>
+      <div class="main-content">
+          <h2>Welcome to Travel Track</h2>
+          <p>Welcome to Travel Track, the cutting-edge web platform that takes your travel experiences to new heights. With Travel Track, not only can you plan, organize, and track your adventures effortlessly, but you also earn exciting rewards for your wanderlust. Imagine a world where every journey you take becomes a stepping stone towards your next thrilling expedition.</p>
+          <p>Embark on the journey, Travel With Track! </p>
+      </div>
+  
+    
+    <div class="image-container">
+        <img src="./images/Screenshot 2023-06-27 173429.jpg" alt="Image">
+    </div>
+</main>
 
-  <footer>
+<footer>
     <p>&copy; 2023 Travel Track. All rights reserved. Created by Luke Muraña</p>
-  </footer>
+</footer>
 </body>
 </html>
